--- a/cmd/pom.xml
+++ b/cmd/pom.xml
@@ -15,7 +15,7 @@
 <!-- FIXME change it to the project's website -->
 
 
-<url>http://www.example.com</url>
+<url>http://www.vsritsolutions.com</url>
 
 
 -<properties>
@@ -106,6 +106,15 @@
 <artifactId>maven-jar-plugin</artifactId>
 
 <version>3.0.2</version>
+   <configuration>
+                <archive>
+                    <index>true</index>
+                    <manifest>
+                        <mainClass>com.mycompany.app.App</mainClass>
+                    </manifest>
+                </archive>
+        </configuration>
+
 
 </plugin>
 
