--- a/cmd/pom.xml
+++ b/cmd/pom.xml
@@ -18,7 +18,7 @@
 <url>http://www.vsritsolutions.com</url>
 
 
--<properties>
+<properties>
 
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -29,10 +29,10 @@
 </properties>
 
 
--<dependencies>
+<dependencies>
 
 
--<dependency>
+<dependency>
 
 <groupId>junit</groupId>
 
@@ -47,22 +47,22 @@
 </dependencies>
 
 
--<build>
+<build>
 
 
--<pluginManagement>
+<pluginManagement>
 
 <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
 
 
 
--<plugins>
+<plugins>
 
 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
 
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-clean-plugin</artifactId>
 
@@ -74,7 +74,7 @@
 
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-resources-plugin</artifactId>
 
@@ -83,7 +83,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-compiler-plugin</artifactId>
 
@@ -92,7 +92,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-surefire-plugin</artifactId>
 
@@ -101,7 +101,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-jar-plugin</artifactId>
 
@@ -119,7 +119,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-install-plugin</artifactId>
 
@@ -128,7 +128,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-deploy-plugin</artifactId>
 
@@ -140,7 +140,7 @@
 
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-site-plugin</artifactId>
 
@@ -149,7 +149,7 @@
 </plugin>
 
 
--<plugin>
+<plugin>
 
 <artifactId>maven-project-info-reports-plugin</artifactId>
 
